# paper-md

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh  setup.sh  todo.md
src/paper_md/: __init__.py  config.py  main.py  models.py
src/paper_md/api/: __init__.py  routes.py
src/paper_md/services/: __init__.py  markdown.py  metadata.py  pdf_parser.py  structure.py  table_formatter.py  vision.py
src/paper_md/static/: index.html
src/paper_md/utils/: __init__.py  helpers.py
src/paper_md/workers/: __init__.py  processor.py
tests/: __init__.py  test_api.py
